@@ -229,7 +229,7 @@ public class UsuarioServiceImpl implements UsuarioService {
 		}
 		
 		//validar que el codigo no sea null
-		if (usuarioDTO.getCodigo() != null && !usuarioDTO.getCodigo().isBlank()) {
+		if (usuarioDTO.getCodigo() != null && !usuarioDTO.getCodigo().isEmpty()) {
 			
 			//Validar si el correo es diferente para crear o actualizar
 			if (!usuarioDTO.getCodigo().equals(usuario.getCodigo())) {
@@ -251,7 +251,7 @@ public class UsuarioServiceImpl implements UsuarioService {
 		}
 		
 		//Validar que el direccion no sea null 
-		if (usuarioDTO.getDireccion() != null && !usuarioDTO.getDireccion().isBlank()) {
+		if (usuarioDTO.getDireccion() != null && !usuarioDTO.getDireccion().isEmpty()) {
 			
 			//Seteo el direccion
 			usuario.setDireccion(usuarioDTO.getDireccion());
@@ -261,7 +261,7 @@ public class UsuarioServiceImpl implements UsuarioService {
 		}
 		
 		//Validar que la contraseña no sea null 
-		if (usuarioDTO.getPss() != null && !usuarioDTO.getPss().isBlank()) {
+		if (usuarioDTO.getPss() != null && !usuarioDTO.getPss().isEmpty()) {
 			
 			//Seteo la contraseña
 			usuario.setPss(usuarioDTO.getPss());
@@ -271,10 +271,10 @@ public class UsuarioServiceImpl implements UsuarioService {
 		}
 		
 		//Validar que el nombre no sea null 
-		if (usuarioDTO.getNombre() != null && !usuarioDTO.getNombre().isBlank()) {
+		if (usuarioDTO.getNombre() != null && !usuarioDTO.getNombre().isEmpty()) {
 			
 			//Validar si trae apellido
-			if (usuarioDTO.getApellido() != null && !usuarioDTO.getApellido().isBlank()) {
+			if (usuarioDTO.getApellido() != null && !usuarioDTO.getApellido().isEmpty()) {
 				usuario.setNombre(usuarioDTO.getNombre() + " " + usuarioDTO.getApellido().trim());
 			}else {
 				
@@ -315,11 +315,11 @@ public class UsuarioServiceImpl implements UsuarioService {
 				throw new ZMessManager("El objeto usuario viene vacio o null");
 			}
 			
-			if(usuarioDTO.getPss() == null || usuarioDTO.getPss().trim().isBlank()) {
+			if(usuarioDTO.getPss() == null || usuarioDTO.getPss().trim().isEmpty()) {
 				throw new ZMessManager("La contraseña no puede ser vacia");
 			}
 			
-			if(usuarioDTO.getCodigo() == null || usuarioDTO.getCodigo().trim().isBlank()) {
+			if(usuarioDTO.getCodigo() == null || usuarioDTO.getCodigo().trim().isEmpty()) {
 				throw new ZMessManager("El codigo no puede ser vacia");
 			}
 			
@@ -372,8 +372,8 @@ public class UsuarioServiceImpl implements UsuarioService {
 			}
 			
 			//Se realiza las validciones para los filtros correspondientes
-			String nombre = usuarioDTO.getNombre() == null || usuarioDTO.getNombre().isBlank() ? "-1" : usuarioDTO.getNombre().trim();
-			String codigo = usuarioDTO.getCodigo() == null || usuarioDTO.getCodigo().isBlank() ? "-1" : usuarioDTO.getCodigo().trim();
+			String nombre = usuarioDTO.getNombre() == null || usuarioDTO.getNombre().isEmpty() ? "-1" : usuarioDTO.getNombre().trim();
+			String codigo = usuarioDTO.getCodigo() == null || usuarioDTO.getCodigo().isEmpty() ? "-1" : usuarioDTO.getCodigo().trim();
 		
 			return usuarioRepository.consultarUsuarios(Constantes.ESTADO_ACTIVO, nombre, codigo);
 			
